--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -265,11 +265,19 @@
   publisher={ACM}
 }
 
-@article{aydemir2017towards,
+@misc{aydemir2017towards,
   title={Towards Aligning Multi-Concern Models via NLP},
   author={Aydemir, Fatma Ba\c sak and Dalpiaz, Fabiano},
-  journal={Unpublished},
   year={2017}
+}
+
+@online{princeton2010wordnet,
+  title={About Wordnet.},
+  author={Princeton Univeristy},
+  organization={Princeton University},
+  publisher={Princeton University},
+  url={http://wordnet.princeton.edu},
+  urldate={2017-07-10},
 }
 
 ###########################
