--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -280,6 +280,45 @@
   urldate={2017-07-10},
 }
 
+@article{leacock1998combining,
+  title={Combining local context and WordNet similarity for word sense identification},
+  author={Leacock, Claudia and Chodorow, Martin},
+  journal={WordNet: An electronic lexical database},
+  volume={49},
+  number={2},
+  pages={265--283},
+  year={1998}
+}
+@inproceedings{wu1994verbs,
+  title={Verbs semantics and lexical selection},
+  author={Wu, Zhibiao and Palmer, Martha},
+  booktitle={Proceedings of the 32nd annual meeting on Association for Computational Linguistics},
+  pages={133--138},
+  year={1994},
+  organization={Association for Computational Linguistics}
+}
+@article{resnik1995using,
+  title={Using information content to evaluate semantic similarity in a taxonomy},
+  author={Resnik, Philip},
+  journal={arXiv preprint cmp-lg/9511007},
+  year={1995}
+}
+@article{jiang1997semantic,
+  title={Semantic similarity based on corpus statistics and lexical taxonomy},
+  author={Jiang, Jay J and Conrath, David W},
+  journal={arXiv preprint cmp-lg/9709008},
+  year={1997}
+}
+@inproceedings{lin1998information,
+  title={An information-theoretic definition of similarity.},
+  author={Lin, Dekang and others},
+  booktitle={Icml},
+  volume={98},
+  number={1998},
+  pages={296--304},
+  year={1998}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
